@@ -1,3 +1,8 @@
+2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* Control.cs:
+	ResolveClientUrl considers TemplateSourceDirectory property.
+
 2007-04-30 Konstantin Triger <kostat@mainsoft.com>
 
 	* DataBinder.cs: When formatting, threat empty string as null.
