@@ -1,3 +1,8 @@
+2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* SqlDataSourceView.cs:
+	make CancelSelectOnNullParameter property works.
+
 2007-04-19 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* ChangePassword.cs:
